--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="My personal website built using React.js and CSS"
     />
+    <meta name="title" property="og:title" content="Khang Le" />
+    <meta property="og:type" content="website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/meta_image.png"
+    />
+    <meta name="author" content="Khang Le" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
