--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       property="og:description"
-      content="My personal website built using React.js and CSS"
+      content="My personal website built using React and CSS"
     />
     <meta name="title" property="og:title" content="Khang Le" />
     <meta property="og:type" content="website" />
